--- a/appsettings.json
+++ b/appsettings.json
@@ -1,10 +1,13 @@
 {
+  "ConnectionStrings": {
+    "dev_mssql_db": "Server=(localdb)\\mssqllocaldb;Database=time2buy;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-"AllowedHosts": "*"
+    }
+  },
+  "AllowedHosts": "*"
 }
