--- a/timetobuy.csproj
+++ b/timetobuy.csproj
@@ -20,6 +20,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.2" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="shouldly" Version="3.0.2" />
   </ItemGroup>
 
   <ItemGroup>
